--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -2,12 +2,14 @@
 
 .footer {
   background: $green;
+  margin-top: rem(50);
   padding-top: rem(50);
   padding-bottom: rem(56);
   padding-inline: rem(15);
 
   @include mq(md) {
     padding-inline: 0;
+    margin-top: rem(80);
     padding-top: rem(82);
     padding-bottom: rem(80);
   }
