--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -7,8 +7,11 @@
   left: 0;
   right: 0;
   background-color: $blue;
-  opacity: 0.7;
-  height: rem(87);
+  background-color: rgba(13,41,54,0.68);
+  height: rem(80);
+  @include mq("md") {
+    height: rem(90);
+  }
 }
 
 .header__inner {
@@ -16,9 +19,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: rem(21) rem(12);
+  padding: rem(0) rem(12);
   @include mq("md") {
-    padding: rem(38) rem(38) rem(30);
+    padding: rem(0) rem(38);
   }
 }
 
@@ -31,16 +34,87 @@
   }
 }
 
+//PC
+
+.header__pc-nav {
+  height: inherit;
+  @include mq("md") {
+    display: block;
+  }
+}
+
+.pc-nav__items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+  gap: rem(40);
+}
+
+.pc-nav__item {
+  height: inherit;
+}
+
+.pc-nav__item a {
+  display:flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  color: $white;
+  height: inherit;
+}
+
+.pc-nav__main {
+  font-size: rem(18);
+  font-weight: $regular;
+  font-family: $eng-font-family;
+  text-align: center;
+}
+
+.pc-nav__sub {
+  position: relative;
+  font-size: rem(10);
+  font-weight: $regular;
+  text-align: center;
+}
+
+.pc-nav__sub::after {
+  position: absolute;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: $white;
+  bottom: -1px;
+  transform: scale(0, 1);
+  transform-origin: center top;
+  transition: transform 0.3s;
+  }
+
+  .pc-nav__sub:hover::after {
+  transform: scale(1, 1);
+  }
+
+.pc-nav {
+  display: none;
+  @include mq("md") {
+    display:block;
+  }
+}
+
+
 //sp ドロワー
 .drawer-menu {
   width: 100%;
   height: 100vh;
+  overflow:hidden;
   display: none;
   position: absolute;
   z-index: 5000;
   top: rem(0);
   left: rem(0);
   background-color: $green;
+  overflow-y: scroll; //スマホ横にした場合のスクロール
 }
 
 .drawer-menu__wrap {
@@ -138,68 +212,3 @@
   }
 }
 
-
-//PC
-
-.header__pc-nav {
-  height: rem(54);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.pc-nav__items {
-  display: flex;
-  justify-content: center;
-  height: inherit;
-}
-
-.pc-nav__item {
-  position: relative;
-  height: inherit;
-  display:flex;
-  flex-flow: column;
-  align-items: center;
-  color: $white;
-}
-
-.pc-nav__item::after {
-  position: absolute;
-  left: 0;
-  content: '';
-  width: 100%;
-  height: 2px;
-  background: $white;
-  bottom: -1px;
-  transform: scale(0, 1);
-  transform-origin: center top;
-  transition: transform 0.3s;
-  }
-
-  .pc-nav__item:hover::after {
-  transform: scale(1, 1);
-  }
-
-.pc-nav__item:not(:first-child) {
-  margin-left: rem(40.5);
-}
-
-.pc-nav__main {
-  height: inherit;
-  font-size: rem(18);
-  font-weight: $regular;
-  font-family: $eng-font-family;
-}
-
-.pc-nav__sub {
-  height: inherit;
-  font-size: rem(10);
-  font-weight: $regular;
-}
-
-.pc-nav {
-  display: none;
-  @include mq("md") {
-    display:block
-  }
-}
