--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -1,9 +1,11 @@
 @use "global" as *;
 
 .blog {
+  margin-top: rem(73);
   @include mq("md") {
     position: relative;
-    margin-bottom: rem(350);
+    margin-top: rem(0);
+    padding-top: rem(100);
   }
 }
 
@@ -18,15 +20,18 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 50%;
+      height: 61%;
       z-index: -1;
   }
 }
 
-.blog__inner.inner {
+.blog__inner {
   position: relative;
   text-align: center;
-  max-width: rem(1129);
+  max-width: rem(600);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .blog__inner::before {
@@ -34,8 +39,8 @@
     content: "";
     position: absolute;
     width: rem(437); 
-    height: rem(201);
-    top: rem(18);
+    height: rem(200);
+    top: rem(-70);
     left: calc(50% - min(50vw, rem(620))); 
     background-image: url(../images/common/Blog-icon.svg);
     background-repeat: no-repeat;
@@ -49,28 +54,21 @@
   font-family: $eng-font-family;
   font-size: rem(32);
   font-weight: $regular;
-  line-height: 0.05em;
   color: $blue;
-  margin-top: rem(99);
 
   @include mq("md") {
     font-size: rem(40);
-    line-height: 1em;
     color: $white;
-  margin-top: rem(95);
   }
 }
 
 .blog__sub-title {
-  margin-top: rem(32);
   font-size: rem(12);
   font-weight: $regular;
-  line-height: 0.05em;
   color: $green;
 
   @include mq("md") {
     color: $white;
-    margin-top: rem(18);
   }
 }
 
@@ -85,6 +83,6 @@
   margin-top: rem(40);
 
   @include mq("md") {
-    margin-top: rem(80);
+    margin-top: rem(75);
   }
 }
