--- a/src/sass/page/_information.scss
+++ b/src/sass/page/_information.scss
@@ -2,31 +2,28 @@
 
 .information {
   background-color: $skyblue;
-  padding: rem(107) 0 rem(85) 0;
+  padding: rem(83) 0 rem(85) 0;
   margin-top: rem(69);
   @include mq("md") {
     background-color: $skyblue;
-    padding: rem(117) 0 rem(79) 0;
+    padding: rem(70) 0;
     margin-top: rem(180);
   }
 }
 
-.information__inner.inner {
-  padding: 0 rem(15);
-}
-
-.information__sub-title.sub-title {
-  margin-top: rem(33);
-  @include mq("md") {
-    margin-top: rem(35);
-  }
+.information__inner {
+  max-width: rem(600);
 }
 
 .information__body {
-  margin-top: rem(37);
+  margin-top: rem(30);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @include mq("md") {
-    display: flex;
-    margin-top: rem(50);
+    flex-direction: row;
+    margin-top: rem(40);
+    align-items: center;
   }
 }
 
@@ -36,27 +33,34 @@
 
   @include mq("md") {
     width: 100%;
+    width: 100%;
     max-width: rem(540);
-    margin-left: rem(15);
   }
+}
+
+.information__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 345 / 227;
 }
 
 .information__text-content {
   text-align: center;
+  margin-top: rem(20);
   @include mq("md") {
-    margin-left: rem(55);
+    margin-left: rem(50);
+    margin-top: 0;
   }
 }
 
 .information__titles {
   text-align-last: left;
-  margin-top: rem(21);
   font-size: rem(20);
   color: $blue;
   border-bottom: 1px solid $green;
   font-weight: $bold;
   @include mq("md") {
-    margin-top: rem(55);
     font-size: rem(24);
   }
 }
