--- a/src/sass/page/_mv.scss
+++ b/src/sass/page/_mv.scss
@@ -3,6 +3,7 @@
 .mv {
   width: 100%;
   height: 100vh;
+  overflow:hidden;
 }
 
 .mv__inner {
@@ -25,7 +26,7 @@
 .mv__text {
   position: absolute;
   z-index: 10; //スライダーよりは手前にする為
-  top: 49%;
+  top: 48%;
   left: 52%;
   width: 100%;
   transform: translate(-49%, -55%);
@@ -57,10 +58,11 @@
   font-family: $eng-font-family;
   color: $white;
   text-align: center;
-  margin-top: rem(33);
+  margin-top: rem(40);
   margin-left: rem(-25);
   @include mq("md") {
     margin-top: rem(55);
     margin-left: rem(-30);
   }
 }
+
