--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -3,20 +3,17 @@
 .price {
   margin-top: rem(80);
   background-color: $skyblue;
-  padding: rem(14) 0 rem(70) 0;
+  padding: rem(35) 0 rem(80) 0;
   width: 100%;
   @include mq("md") {
     margin-top: rem(140);
-    padding: rem(74) 0 rem(90) 0;
+    padding: rem(92) 0 rem(95) 0;
   }
 }
 
-.price__inner.inner {
-  padding: rem(15);
+.price__inner {
+  max-width: rem(600);
   position: relative;
-  @include mq("md") {
-    max-width: rem(1131);
-  }
 }
 
 .price__inner::before {
@@ -25,9 +22,9 @@
     position: absolute;
     width: rem(437); 
     height: rem(201);
-    top: rem(860);
+    top: rem(840);
     left: calc(50% - min(44vw, rem(620))); 
-    background-image: url(/assets/images/common/Price-icon.svg);
+    background-image: url(../images/common/Price-icon.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -35,20 +32,9 @@
   }
 }
 
-.price__title {
-  margin-top: rem(35);
-}
-
-.price__sub-title.sub-title {
-  margin-top: rem(33);
-  @include mq("md") {
-    margin-top: rem(35);
-  }
-}
-
 .price__body {
   width: 100%;
-  margin-top: rem(35);
+  margin-top: rem(30);
   @include mq("md") {
     margin-top: rem(24);
     text-align: center;
@@ -66,11 +52,17 @@
 .price__img {
   @include mq("md") {
     margin-left: rem(93);
-    aspect-ratio: 492 / 746;
     width: 100%;
     max-width: rem(492);
     margin-top: rem(25);
   }
+}
+
+.price__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 492 / 746;
 }
 
 .price__content {
@@ -129,8 +121,16 @@
   }
 }
 
+.price__text {
+  text-align: left;
+}
+
+.price__price-menu {
+  margin-left: rem(10);
+}
+
 .price__button {
-  margin-top: rem(40);
+  margin-top: rem(35);
 }
 
 
