--- a/src/sass/page/_voice-card.scss
+++ b/src/sass/page/_voice-card.scss
@@ -15,33 +15,30 @@
 .voice__card a {
   display: block;
   height: 100%;
+  transition: all 0.3s ease 0s;
+}
+
+.voice__card a:hover {
+  opacity: 0.6;
 }
 
 .voice-card__item {
   width: 100%;
-  max-width: rem(345);
   background-color: $white;
   padding: rem(15) rem(16) rem(24) rem(16);
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
 
   @include mq("md") {
     width: 100%;
-    max-width: rem(520);
+    // max-width: rem(520);
     padding: rem(25) rem(25) rem(24);
   }
 }
 
-// .voice-card__item-content {
-//   padding: rem(20) prem(25) prem(25);
-//   @include mq(md){
-//       padding: rem(25) prem(30) prem(30);
-//   }
-// }
-
 .voice-card__box {
   display: flex;
   @include mq("md") {
-    // display: flex;
+    display: flex;
     justify-content: space-between;
   }
 }
@@ -67,11 +64,10 @@
 }
 
 .voice-card__items {
+  flex-grow: 1;
   margin-top: rem(24);
-  max-width: rem(149);
   @include mq("md") {
     max-width: none;
-    margin-top: rem(30);
   }
 }
 
@@ -92,6 +88,7 @@
   border-bottom: 1px solid $green;
   margin-top: rem(3);
   text-align: left;
+  word-break: break-word;
 
   @include mq("md") {
     font-size: rem(24);
@@ -100,20 +97,22 @@
   }
 }
 
+.voice-card__item-img {
+  flex-shrink: 0;
+  width: rem(151);
+  height: auto;
+  @include mq("md") {
+    width: rem(180);
+  }
+}
+
 .voice-card__item-img img {
-  margin-top: rem(10);
   width: 100%;
-  max-width: rem(151);
   aspect-ratio: 151 / 117;
   object-fit: cover;
-  margin-left: auto;
 
   @include mq("md") {
-    margin-top: rem(0);
-    max-width: rem(180);
-    width: 100%;
     aspect-ratio: 180 / 140;
-    object-fit: cover;
   }
 }
 
