--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -3,15 +3,14 @@
 .voice {
   margin-top: rem(102);
   @include mq("md") {
-    margin-top: rem(130);
+    margin-top: rem(140);
   }
 }
 
-.voice__inner.inner {
-  padding: 0 rem(15);
+.voice__inner {
+  max-width: rem(600);
   @include mq("md") {
     position: relative;
-    max-width: rem(1130);
   }
 }
 
@@ -21,7 +20,7 @@
     position: absolute;
     width: rem(71); 
     height: rem(162);
-    top: rem(650);
+    top: rem(550);
     left: calc(50% - min(-32.7vw, rem(620))); 
     background-image: url(../images/common/Voice-icon2.svg);
     background-repeat: no-repeat;
@@ -37,7 +36,7 @@
     position: absolute;
     width: rem(301); 
     height: rem(138);
-    top: rem(-5);
+    top: rem(-105);
     left: calc(50% - min(43vw, rem(620))); 
     background-image: url(../images/common/Voice-icon1.svg);
     background-repeat: no-repeat;
@@ -51,22 +50,9 @@
   text-align: center;
 }
 
-.voice__title {
-  @include mq("md") {
-    padding-top: rem(135);
-  }
-}
-
-.voice__sub-title.sub-title {
-  margin-top: rem(32);
-  @include mq("md") {
-    margin-top: rem(36);
-  }
-}
-
 .voice__button {
   margin-top: rem(40);
   @include mq("md") {
-    margin-top: rem(80);
+    margin-top: rem(75);
   }
 }
