0603　動画FB修正済み

--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -43,8 +43,8 @@
 }
 
 .hamburger.is-active span:first-child {
-  -webkit-transform: translateY(9px) rotate(65deg);
-  transform: translateY(9px) rotate(35deg);
+  -webkit-transform: translateY(10px) rotate(35deg);
+  transform: translateY(10px) rotate(35deg);
 }
 
 .hamburger.is-active span:nth-child(2) {
@@ -52,6 +52,15 @@
 }
 
 .hamburger.is-active span:nth-child(3) {
-  -webkit-transform: translateY(-10px) rotate(-45deg);
+  -webkit-transform: translateY(-10px) rotate(-35deg);
   transform: translateY(-10px) rotate(-35deg);
+}
+
+.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
