--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -26,9 +26,10 @@
 }
 
 .campaign__button {
+  text-align: center;
   margin-top: rem(40);
-  @include mq("md") {
-    margin-top: rem(80);
+  @include mq("md"){
+      margin-top: rem(80);
   }
 }
 
