--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -1,121 +1,66 @@
-@use "global" as *;
+@use 'global' as *;
 
 .button {
-  position: relative;
-  color: $white;
-  background-color: $green;
-  padding: rem(16) rem(40);
-  display: inline-block;
-  z-index: 10;
+    text-align: center;
+    display: inline-block;
+    font-size: rem(14);
+    line-height: calc(11 / 7);
+    font-family: $eng-font-family;
+    color: $white;
+    width: rem(202);
+    padding: rem(16) 0;
+    background-color: $green;
+    position: relative;
+    z-index: 1;
+    align-items: center;
 }
 
-.button::before {
-  content: "";
-  position: absolute;
-  top: rem(4);
-  bottom: rem(-4);
-  right: rem(-4);
-  left: rem(4);
-  border: solid rem(1) $green;
-  z-index: -10;
-}
-
-.button::after { //ホバースライド
-  background-color: $white;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-  width: 100%;
-  height: 100%;
-  transform: scale(0, 1);
-  transform-origin: left top;
-  transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
-  z-index: -10;
-  border: rem(1) solid $green;
+.button::after {
+    background-color: $white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 100%;
+    transform: scale(0, 1);
+    transform-origin: left top;
+    transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
+    z-index: -1;
+    border: rem(1) solid $green;
 }
 
 .button:hover {
-  color: $green;
+    color: $green;
 }
 
 .button:hover::after {
-  transform: scale(1, 1);
+    transform: scale(1, 1);
 }
 
-.button__wrap {
-  display: flex;
-  align-items: center;
+
+.button::before {
+    content: '';
+	width: 100%;
+	height: 100%;
+	border: 1px solid $green;
+	position: absolute;
+	top: rem(4);
+	left: rem(4);
+    z-index: -1;
 }
 
-.button__active {
-  font-size: rem(14);
-  letter-spacing: 0.05em;
-  font-family: $eng-font-family;
-  font-weight: $regular;
+.button span {
+    display: inline-block;
+    width: rem(40);
+    height: rem(6);
+    background-image: url(../images/common/button-arrow1.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: rem(8);
+    margin-bottom: rem(2.5);
 }
 
-.button__stickarrow {  //矢印
-  position: relative;
-  width: rem(40);
-  height: rem(8);
-  border-bottom: 1px solid $white;
-  border-right: 1px solid $white;
-  transform: skew(45deg);
-  margin-left: rem(5);
+.button:hover span {
+    background-image: url(../images/common/button-arrow2.svg);
 }
-
-.button__stickarrow::after { //ホバー矢印
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-  width: 100%;
-  height: 100%;
-  transform: scale(0, 1);
-  transform-origin: left top;
-  transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
-  z-index: -10;
-  border-bottom: 1px solid $green;
-  border-right: 1px solid $green;
-}
-
-.button__stickarrow {
-  color: $green;
-}
-
-.button__stickarrow::after {
-  transform: scale(1, 1);
-}
-
-// .button__reverse {
-//   position: relative;
-//   border: solid rem(1) $green;
-//   background-color: $white;
-//   padding: rem(16) rem(40);
-//   display: inline-block;
-// }
-
-// .button__reverse::before {
-//   content: "";
-//   position: absolute;
-//   top: rem(4);
-//   bottom: rem(-4);
-//   right: rem(-4);
-//   left: rem(4);
-//   border: solid rem(1) $green;
-//   z-index: -1;
-// }
-
-// .button__active-reverse {
-//   color: $green;
-//   font-size: rem(14);
-// }
-
-// .stickarrow-reverse {
-//   width: rem(40);
-//   height: rem(8);
-//   border-bottom: 1px solid $green;
-//   border-right: 1px solid $green;
-//   transform: skew(45deg);
-// }
