--- a/src/sass/page/_blog-card.scss
+++ b/src/sass/page/_blog-card.scss
@@ -13,21 +13,18 @@
   }
 }
 
-.blog__card a {
-  display: block;
+.blog-card__item a {
+  display: flex;
+  flex-direction: column;
   height: 100%;
-  background-color: #fff;
-  transition: all 0.3s ease 0s;
-}
-
-.blog__card a:hover {
-  opacity: 0.6;
-}
-
-.blog-card__item {
   background-color: $white;
+  transition: all 0.3s ease 0s;
   padding: rem(16) rem(16) rem(24);
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+}
+
+.blog-card__item a:hover {
+  opacity: 0.6;
 }
 
 .voice-card__box {
