--- a/src/sass/page/_campaign-card.scss
+++ b/src/sass/page/_campaign-card.scss
@@ -7,6 +7,8 @@
 
 
 .campaign__card {
+  display: flex;                /* 追加 */
+  flex-direction: column;  /* 追加 */
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
     width: 100%;
     max-width: rem(280);
@@ -18,8 +20,9 @@
 }
 
 .campaign__card a {
+  display: flex; //文字数増えた時の下揃え
+  flex-direction: column; //文字数増えた時の下揃え
   height: 100%;
-  display: block;
   background-color: $white;
   transition: all 0.3s ease 0s;
 }
@@ -42,6 +45,9 @@
 }
 
 .campaign__card-body {
+  flex-grow: 1;//文字数増えた時の下揃え
+  display: flex;//文字数増えた時の下揃え
+  flex-direction: column;//文字数増えた時の下揃え
   padding: rem(16) rem(16) rem(18.5);
   @include mq("md") {
     padding: rem(24) rem(16) rem(40);
@@ -49,6 +55,7 @@
 }
 
 .campaign__card-meta {
+  flex-grow: 1; //文字数増えた時の下揃え
   padding-bottom: rem(8);
   border-bottom: 1px solid $green;
   text-align: left;
