--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -34,27 +34,26 @@
 
 .price__body {
   width: 100%;
-  margin-top: rem(30);
+  margin-top: rem(24);
   @include mq("md") {
-    margin-top: rem(24);
+    margin-top: rem(40);
     text-align: center;
   }
 }
 
 .price__box {
-  width: 100%;
-  @include mq("md") {
-    display: flex;
-    flex-direction:row-reverse;
+  @include mq("md"){
+      display: flex;
+      flex-direction: row-reverse;
+      gap: rem(90);
+      padding: 0 rem(2);
+      aspect-ratio: 1.443;
   }
 }
 
 .price__img {
-  @include mq("md") {
-    margin-left: rem(93);
-    width: 100%;
-    max-width: rem(492);
-    margin-top: rem(25);
+  aspect-ratio: 345 / 227;
+  @include mq("md"){
     aspect-ratio: 492 / 746;
   }
 }
@@ -76,10 +75,10 @@
 .price__item {
   display: flex;
   flex-direction: column;
-  margin-top: rem(-3);
+  // margin-top: rem(-3);
   width: 100%;
   @include mq("md") {
-    margin-top: rem(20);
+    // margin-top: rem(20);
   }
 }
 
@@ -130,7 +129,11 @@
 }
 
 .price__button {
-  margin-top: rem(35);
+  text-align: center;
+  margin-top: rem(40);
+  @include mq("md"){
+      margin-top: rem(80);
+  }
 }
 
 
