--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -51,8 +51,9 @@
 }
 
 .voice__button {
+  text-align: center;
   margin-top: rem(40);
-  @include mq("md") {
-    margin-top: rem(75);
+  @include mq("md"){
+      margin-top: rem(80);
   }
 }
