--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -131,7 +131,7 @@
 }
 
 .drawer-menu__list {
-  // margin-top: rem(105);
+  padding-bottom: rem(32);
   display: flex;
   justify-content: center;
 }
