--- a/src/sass/page/_voice-card.scss
+++ b/src/sass/page/_voice-card.scss
@@ -82,6 +82,7 @@
 .voice-card__item-title {
   font-size: rem(16);
   font-weight: $normal;
+  color: $blue;
   border-bottom: 1px solid $green;
   margin-top: rem(3);
   text-align: left;
@@ -116,6 +117,7 @@
 .voice-card__item-text {
   font-size: rem(16);
   font-weight: $regular;
+  color: $blue;
   font-family: $base-font-family;
   margin-top: rem(15);
   text-align: left;
