--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -25,8 +25,9 @@ body {
 }
 
 // フォントウェイト
-$regular: 300;
-$normal: 400;
+$light: 300;
+$regular: 400;
+$normal: 500;
 $bold: 700;
 
 ////////////////////
