--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -9,7 +9,7 @@
 
   @include mq(md) {
     padding-inline: 0;
-    margin-top: rem(80);
+    margin-top: rem(160);
     padding-top: rem(82);
     padding-bottom: rem(80);
   }
@@ -21,8 +21,9 @@
   margin-inline: auto;
 
   @include mq(md) {
-    width: fit-content;
     max-width: none;
+    width: fit-content;
+    padding-inline: 20px;
   }
 }
 
