--- a/src/sass/page/_blog-card.scss
+++ b/src/sass/page/_blog-card.scss
@@ -56,6 +56,7 @@
 .blog-card__item-title {
   font-size: rem(16);
   font-weight: $normal;
+  color: $blue;
   line-height: 1.5;
   padding-bottom: rem(4);
   border-bottom: 1px solid $green;
