--- a/src/sass/page/_campaign-card.scss
+++ b/src/sass/page/_campaign-card.scss
@@ -7,8 +7,8 @@
 
 
 .campaign__card {
-  display: flex;                /* 追加 */
-  flex-direction: column;  /* 追加 */
+  display: flex;
+  flex-direction: column;
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
     width: 100%;
     max-width: rem(280);
@@ -98,6 +98,8 @@
   justify-content: center;
   align-items: center;
   line-height: 1;
+  color: $blue;
+  font-weight: $regular;
   @include mq("md") {
     font-size: rem(16);
   }
