--- a/src/sass/page/_information.scss
+++ b/src/sass/page/_information.scss
@@ -19,7 +19,7 @@
   margin-top: rem(30);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   @include mq("md") {
     flex-direction: row;
     margin-top: rem(40);
@@ -48,6 +48,7 @@
 .information__text-content {
   text-align: center;
   margin-top: rem(20);
+  width: 45.6%;
   @include mq("md") {
     margin-left: rem(50);
     margin-top: 0;
@@ -68,7 +69,6 @@
 .information__text {
   text-align: left;
   margin-top: rem(6);
-  font-size: rem(16);
   font-size: rem(16);
   font-weight: $regular;
   @include mq("md") {
