--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -21,7 +21,7 @@
     width: rem(71); 
     height: rem(162);
     top: rem(550);
-    left: calc(50% - min(-32.7vw, rem(620))); 
+    right: calc(50% - min(48.5vw, rem(540))); 
     background-image: url(../images/common/Voice-icon2.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -37,7 +37,7 @@
     width: rem(301); 
     height: rem(138);
     top: rem(-105);
-    left: calc(50% - min(43vw, rem(620))); 
+    left: calc(50% - min(48.5vw, rem(620))); 
     background-image: url(../images/common/Voice-icon1.svg);
     background-repeat: no-repeat;
     background-position: center;
