--- a/src/sass/module/_swiper.scss
+++ b/src/sass/module/_swiper.scss
@@ -1,15 +1,14 @@
 @use "global" as *;
 
-
 /* 前へ次への矢印カスタマイズ */
 .swiper-button-prev,
 .swiper-button-next {
-  position: absolute;
   display: none;
-  width: rem(80);
-  height: rem(80);
   @include mq("md") {
     display: flex;
+    width: rem(80);
+    height: rem(80);
+    right: rem(70);
   }
 }
 
@@ -24,19 +23,6 @@
   margin: auto;
 }
 
-.swiper-button-prev {
-  @include mq("md") {
-    top: 4%;
-    left: 90%;
-  }
-}
-
-.swiper-button-next {
-  @include mq("md") {
-    top: 4%;
-    left: 76%;
-  }
-}
 
 /* 前への矢印カスタマイズ */
 .swiper-button-prev::after {
