--- a/src/sass/page/_voice-card.scss
+++ b/src/sass/page/_voice-card.scss
@@ -1,18 +1,6 @@
 @use "global" as *;
 
-.voice__card {
-  margin-top: rem(50);
-  display: grid;
-  gap: rem(39);
-  grid-template-columns: repeat(1, 1fr);
-  @include mq(md){
-      margin-top: rem(40);
-      gap: rem(40);
-      grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.voice-card__item a {
+.voice-card{
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -28,7 +16,7 @@
   }
 }
 
-.voice-card__item a:hover {
+.voice-card:hover {
   opacity: 0.6;
 }
 
