--- a/src/sass/module/_contact-top.scss
+++ b/src/sass/module/_contact-top.scss
@@ -64,14 +64,14 @@
   }
 }
 
-.contact-top__title-main.title__main {
+.title__main--contact-top.title__main {
   line-height: 1;
   font-size: rem(80);
   font-weight: $regular;
   font-family: $eng-font-family;
 }
 
-.contact-top__title-sub.title__sub {
+.title__sub--contact-top.title__sub {
   line-height: 1;
 }
 
