--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -1,12 +1,10 @@
 @use "global" as *;
 
-.blog__cards {
-  margin-top: rem(32);
+.blog-cards {
   display: grid;
   gap: rem(39);
   grid-template-columns: repeat(1, 1fr);
   @include mq(md){
-    margin-top: rem(88);
     gap: rem(40);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
