--- a/src/sass/module/_voice-cards.scss
+++ b/src/sass/module/_voice-cards.scss
@@ -1,12 +1,10 @@
 @use "global" as *;
 
-.voice__cards {
-  margin-top: rem(50);
+.voice-cards {
   display: grid;
   gap: rem(39);
   grid-template-columns: repeat(1, 1fr);
   @include mq(md){
-      margin-top: rem(40);
       gap: rem(40);
       grid-template-columns: repeat(2, 1fr);
   }
