--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -14,8 +14,8 @@
   opacity: 0.8;
 }
 
-.blog-card img:hover {
-  transform: scale(1.1);
+.blog-card:hover .blog-card__item-img img {
+  transform: scale(1.3);
 }
 
 .voice-card__box {
