--- a/src/sass/module/_page-blog-detail.scss
+++ b/src/sass/module/_page-blog-detail.scss
@@ -1,31 +1,5 @@
 @use "global" as *;
 
-.page-blog-detail__inner {
-  max-width: rem(600);
-  position: relative;
-}
-
-.page-blog-detail__inner::before {
-  content: "";
-  position: absolute;
-  width: rem(120);
-  height: rem(55);
-  background-image: url(../images/common/Voice-icon1.svg);
-  top: rem(-26);
-  left: calc(50% - min(48.5vw, rem(620))); 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: 10;
-  @include mq("md") {
-    background-image: url(../images/common/Voice-icon1.svg);
-    width: rem(301);
-    height: rem(138);
-    top: rem(-70);
-    z-index: -10;
-  }
-}
-
 .page-blog-detail__wraps {
   display: flex;
   flex-direction: column;
@@ -43,6 +17,7 @@
 }
 
 .page-blog-detail__title {
+  border-bottom: rem(1) solid $green;
   margin-top: rem(6);
   font-size: rem(24);
   font-weight: $normal;
@@ -63,8 +38,7 @@
   aspect-ratio: 175 / 117;
 }
 
-
-.page-blog-detail__text {
+.page-blog-container--detail p {
   margin-top: rem(25);
   font-size: rem(16);
   font-weight: $regular;
@@ -74,25 +48,7 @@
   }
 }
 
-.page-blog-detail__texts {
-  margin-top: rem(24);
-  font-size: rem(16);
-  font-weight: $regular;
-
-  @include mq("md") {
-    margin-top: rem(40);
-  }
-}
-
-.page-blog-detail__wrap {
-  margin-top: rem(24);
-
-  @include mq("md") {
-    margin-top: rem(40);
-  }
-}
-
-.page-blog-detail__list--wrap {
+.page-blog-container--detail ul {
   margin-top: rem(26);
 
   @include mq("md") {
@@ -100,15 +56,22 @@
   }
 }
 
-.page-blog-detail__list {
+.page-blog-container--detail li {
   font-size: rem(16);
   font-weight: $regular;
   display: flex;
-  align-items: center;
+  justify-content: flex-start;
 }
 
-.page-blog-detail__list:not(:first-child) {
+.page-blog-container--detail li:not(:first-child) {
   margin-top: rem(4);
+}
+
+.page-blog-container--detail li::before {
+  display: block;
+  content: url(../images/common/hitode2.svg);
+  max-width: rem(18);
+  margin-right: rem(9);
 }
 
 .page-blog-detail__list img {
