--- a/src/sass/module/_page-blog.scss
+++ b/src/sass/module/_page-blog.scss
@@ -2,37 +2,13 @@
 
 .page-blog__inner {
   max-width: rem(600);
-  position: relative;
-}
-
-.page-blog__inner::before {
-  content: "";
-  position: absolute;
-  width: rem(120);
-  height: rem(55);
-  background-image: url(../images/common/Voice-icon1.svg);
-  top: rem(-30);
-  left: calc(50% - min(48.5vw, rem(620))); 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: 10;
-  @include mq("md") {
-    background-image: url(../images/common/Voice-icon1.svg);
-    width: rem(301);
-    height: rem(138);
-    top: rem(-70);
-    z-index: -10;
-  }
 }
 
 .page-blog__wraps {
-  margin-top: rem(52);
   display: flex;
   flex-direction: column;
   align-items: center;
   @include mq("md") {
-    margin-top: rem(140);
     flex-direction: row;
     align-items: flex-start;
   }
@@ -84,14 +60,15 @@
 }
 
 .page-blog__title {
-  font-size: rem(24);
-  font-weight: $regular;
   width: 100%;
   display: flex;
   align-items: center;
 }
 
-.page-blog__title p {
+.page-blog__title h2 {
+  font-size: rem(24);
+  font-family: $base-font-family;
+  font-weight: $regular;
   margin-left: rem(10);
 }
 
@@ -192,3 +169,9 @@
   margin-right: rem(6);
 }
 
+
+//page-blog-detail
+
+.page-blog-container--detail date {
+
+}
