--- a/src/sass/module/_page-price.scss
+++ b/src/sass/module/_page-price.scss
@@ -1,142 +1,6 @@
 @use "global" as *;
 
-.page-price__inner {
-  position: relative;
-  @include mq("md") {
-    max-width: rem(1050);
-    position: relative;
-  }
-}
-
-.page-price__inner::before {
-  content: "";
-  position: absolute;
-  width: rem(120); 
-  height: rem(55);
-  background-image: url(../images/common/Voice-icon1.svg);
-  top: rem(-25);
-  left: calc(50% - min(48.5vw, rem(620))); 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: -10;
-  @include mq("md") {
-    background-image: url(../images/common/Voice-icon1.svg);
-    width: rem(301);
-    height: rem(138);
-    top: rem(-70);
-    z-index: -10;
-  }
-}
-
-.page-price__item {
-  // width: 100%;
-  justify-content: center;
-  @include mq("md") {
-    display: flex;
-  }
-}
-
-.page-price__item:not(:first-child) {
-  margin-top: rem(40);
-  @include mq("md") {
-    margin-top: rem(80);
-  }
-}
-
-.page-price__table {
+.page-price__inner.inner {
   width: 100%;
-  border-collapse: collapse;
-  @include mq("md") {
-    width: 50%;
-  }
+  max-width: rem(750);
 }
-
-.page-price__heading {
-  font-size: rem(16);
-  font-weight: $bold;
-  color: $white;
-  background-color: $green;
-  padding: rem(8) rem(0);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: rem(8);
-  border-spacing: rem(0);
-  @include mq("md") {
-  display: flex;
-  flex-direction: column-reverse;
-  width: rem(200);
-  height: auto;
-  }
-}
-
-
-
-.page-price__heading img {
-  width: rem(24);
-  @include mq("md") {
-    width: rem(64);
-  }
-}
-
-.page-price__list {
-  display: flex;
-  width: 100%;
-  border-left: 1px solid $green;
-  border-top: 1px solid $green;
-
-  @include mq("md") {
-  border-top: 1px solid $green;
-  }
-}
-
-
-.page-price__text,
-.page-price__price-menu {
-  width: 100%;
-  font-size: rem(16);
-  font-weight: $regular;
-  color: $blue;
-  // padding: rem(5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.page-price__price-menu {
-  padding-right: rem(16);
-}
-
-.page-price__list:last-child {
-    border-bottom: 1px solid $green;
-}
-
-.page-price__price-menu:not(:last-child) {
-  margin-bottom: 0;
-}
-
-.page-price__text {
-  text-align: center;
-  width: 70%;
-  height: rem(59);
-  border-right: 1px solid $green;
-  @include mq("md") {
-    width: 65%;
-    justify-content: flex-start;
-    margin-left: rem(15);
-    height: rem(57);
-  }
-}
-
-.page-price__price-menu {
-  border-right: 1px solid $green;
-  justify-content: flex-end;
-  width: 30%;
-  @include mq("md") {
-    width: 35%;
-  }
-}
-
-
-
