--- a/src/sass/module/_accordion.scss
+++ b/src/sass/module/_accordion.scss
@@ -1,12 +1,12 @@
 @use "global" as *;
 
-
-.accordion:not(:first-child) {
+.accordion {
   width: 100%;
-  margin-top: rem(44);
+  display: grid;
+  gap: rem(44);
 
   @include mq("md") {
-    margin-top: rem(35);
+    gap: rem(35);
   }
 }
 
