--- a/src/sass/module/_contact-top.scss
+++ b/src/sass/module/_contact-top.scss
@@ -8,7 +8,7 @@
 .contact-top__inner::before {
   content: "";
   position: absolute;
-  background-image: url(../images/common/Contact-icon2.svg);
+  background-image: url(../images/common/gallery-icon.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   width: rem(109);
