--- a/src/sass/module/_label.scss
+++ b/src/sass/module/_label.scss
@@ -23,9 +23,21 @@
   font-size: rem(24);
   font-family: $base-font-family;
   font-weight: $regular;
-  margin-left: rem(10);
+  
+  display: contents;
 }
 
-.label__title img {
+.label__title h2::before {
+  background-image: url(../images/common/Blog-p-icon.svg);
+  content: " "; /* 空白を指定 */
+  background-repeat: no-repeat;
+  background-size: cover;
   width: rem(50);
+  height: rem(50); /* 高さを追加 */
+  display: inline-block; /* インラインブロックにして表示 */
+  margin-right: rem(10);
 }
+
+
+
+
